workshop03/network.yml
apiVersion: v1
kind: Service
metadata:
  name: codeserver-svc
  namespace: codeserver
  labels:
    app: codeserver
spec:
  type: ClusterIP
  selector:
    app: codeserver
  ports:
  - port: 8443
    targetPort: 8443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codeserver-ingress
  namespace: codeserver
  labels:
    app: codeserver
spec:
  ingressClassName: nginx
  rules:
  - host: code-104.248.98.2.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: codeserver-svc
            port:
              number: 8443
